# tree-sitter-jai

./: .gitattributes  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  grammar_test.jai  h  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-jai.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_jai/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
queries/: context.scm  highlights.scm  indents.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
