[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-jai"
description = "tree-sitter grammar for the language"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "jai"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT-0 License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "constantitus", email = "constantitus@gmail.com" }]
requires-python = ">=3.9"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/constantitus/tree-sitter-jai"

[project.optional-dependencies]
core = ["tree-sitter~=0.22"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
